--- a/message/package.json
+++ b/message/package.json
@@ -2,7 +2,7 @@
     "name": "message",
     "version": "0.0.1",
     "dependencies": {
-          "mysql": "2.15.0",
-          "promise-mysql": "3.2.1"
+        "firebase-admin":"^5.12.1",
+        "firebase-functions":"^1.0.3"
     }
-}  
+}
